[build-system]      # This section tells Python which tool to use to build your package.
requires = ["setuptools", "wheel"]          # These are the packages needed to build your package.
build-backend = "setuptools.build_meta"     # Defines which backend to use to build the project. setuptools.build_meta is the default backend provided by setuptools.
